objects/SurveyInvitation.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Invitations</relationshipLabel>
        <relationshipName>Survey_Invitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Passive__c</fullName>
        <description>Assigns the number value of &quot;1&quot; to this record if the response is greater than 6 or less than 9. Otherwise, the value is 0.</description>
        <formula>IF(
AND((NPS_Score__c &gt; 6),
(NPS_Score__c &lt; 9)),
1,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promoter__c</fullName>
        <description>Assigns a number value to this record of &quot;1&quot; if the NPS Score submitted is greater than 8. Otherwise, the value is 0.</description>
        <formula>IF(NPS_Score__c &gt; 8, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promoter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Detractor__c</fullName>
        <description>Assigns a number value of &quot;1&quot; to this record if the score is less than 7. Otherwise, assigns the value of 0.</description>
        <formula>IF(NPS_Score__c &lt; 7, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detractor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Score__c</fullName>
        <description>NPS Score of survey response associated with Survey Invitation</description>
        <label>NPS Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Grouping__c</fullName>
        <description>Assigns an NPS Grouping of &quot;Detractor,&quot; &quot;Passive,&quot; or &quot;Promoter&quot; based on the NPS Score range of the related Survey Question Response.</description>
        <formula>IF(
AND((NPS_Score__c  &gt;= 0),
(NPS_Score__c &lt; 7)),
&quot;Detractor&quot;,
IF(
AND((NPS_Score__c &gt; 6),
(NPS_Score__c &lt; 9)),
&quot;Passive&quot;,
IF(
(NPS_Score__c &gt; 8),
&quot;Promoter&quot;,
&quot;No Score Present&quot;
)
)
)</formula>
        <label>NPS Grouping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Safe_SF_Id__c</fullName>
        <description>Case sensitive 18 character Salesforce.com Id.</description>
        <formula>CASESAFEID(Id)</formula>
        <label>Case Safe SF Id</label>
        <type>Text</type>
    </fields>
</CustomObject>